[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Jacques Supcik <jacques.supcik@hefr.ch>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = 'hello:main'